# supported-target-tirm57l

./: CMakeLists.txt  README.md  build_flags.cmake  sources.cmake
board_support_package/: CMakeLists.txt  HalCoGen-RM57x.dil  HalCoGen-RM57x.hcg
board_support_package/include/: HL_etpwm.h  HL_phy_dp83640.h  HL_rti.h  HL_sys_vim.h  sys_core.h  sys_vim.h
board_support_package/source/: FreeRTOS_IRQ_handling.c  FreeRTOS_tick_interrupt.c  HL_emac.c  HL_notification.c  HL_pinmux.c  HL_rti.c  HL_sys_intvecs.s  HL_sys_main.c  HL_sys_mpu.s  HL_sys_startup.c  HL_sys_vim.c  sys_core.S  sys_intvecs.S  sys_link.ld  sys_startup.c
clock/: CMakeLists.txt  clock.c  clock.h
coremqtt/: CMakeLists.txt  core_mqtt_config.h
debugging/: CMakeLists.txt  ti_rm57.cfg
flashing/: CMakeLists.txt
freertos/: CMakeLists.txt  FreeRTOSConfig.h  default_freertos_assert.c  default_freertos_hooks.c  tick_interrupt.c
freertos_config/: CMakeLists.txt  FreeRTOSConfig.h
logging/: CMakeLists.txt  logging.h  logging_freertos.c  logging_stack.h
test_port/include/: test_tracker_hardware_config.h
test_port/source/: main.c  test_tracker_hardware_interface.c
transport/: CMakeLists.txt  FreeRTOSIPConfig.h  NetworkInterface.c  default_freertos_plus_tcp_hooks.c  transport.c  transport.h
vscode/: CMakeLists.txt  extensions.json  launch.json.in  tasks.json.in
